# Vaultage

./: .gitignore  pyproject.toml  streamlit_app.py
data/: apy_comparisons.csv  reallocations_0x0c6aec603d48ebf1cecc7b247a2c3da08b398dc1.csv  reallocations_0xd4e95092a8f108728c49f32a30f30556896563b5.csv  reallocations_0xd564f765f9ad3e7d2d6ca782100795a885e8e7c8.csv  reallocations_0xe108fbc04852b5df72f9e44d7c29f47e7a993add.csv  vault_0x0c6aec603d48ebf1cecc7b247a2c3da08b398dc1.csv  vault_0xd4e95092a8f108728c49f32a30f30556896563b5.csv  vault_0xd564f765f9ad3e7d2d6ca782100795a885e8e7c8.csv  vault_0xe108fbc04852b5df72f9e44d7c29f47e7a993add.csv
pages/: 0_Login.py  1_Vault.py  2_Reallocations.py  3_Comparisons.py
src/: app_config.py  auth.py  chain.py  erc4626.py  events.py  fees.py  storage.py
